--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p>{Gourmet restaurant}</p>
             <nav>
                 <ul>
-                    <li><a href="#menu">MENU</a></li>
+                    <li><a href="#https://yae1ram0s.github.io/MenuMiztli/">MENU</a></li>
                     <li><a href="#galeria">GALERIA</a></li>
                     <li><a href="#promociones">PROMOCIONES</a></li>
                     <li><a href="#nosotros">NOSOTROS</a></li>
@@ -134,7 +134,7 @@
                 <h3>MIZTLI</h3>
                 <ul>
                     <li><a href="#inicio">Inicio</a></li>
-                    <li><a href="#">Menu</a></li>
+                    <li><a href="https://yae1ram0s.github.io/MenuMiztli/">Menu</a></li>
                     <li><a href="#nosotros">Nosotros</a></li>
                     <li><a href="#galeria">Galeria</a></li>
                     <li><a href="#promociones">Promociones</a></li>
