--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <!-- Navegacion de la pagina web -->
             <nav>
                 <ul>
-                    <li><a href="#https://yae1ram0s.github.io/MenuMiztli/">MENU</a></li>
+                    <li><a href="https://yae1ram0s.github.io/MenuMiztli/">MENU</a></li>
                     <li><a href="#galeria">GALERIA</a></li>
                     <li><a href="#promociones">PROMOCIONES</a></li>
                     <li><a href="#nosotros">NOSOTROS</a></li>
