--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
+
+    <!-- Contenedor del inicio de la pagina -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,6 +46,7 @@
     <!-- Sección de nosotros -->
     <section id="nosotros" class="about-section">
         <div class="general1">
+            <!-- Explicacion breve del restaurante -->
             <div class="about-text">
                 <h2>NOSOTROS</h2>
                 <p>
