--- a/index.html
+++ b/index.html
@@ -136,12 +136,11 @@
             <!-- Navegacion de la pagina web -->
                 <h3>MIZTLI</h3>
                 <ul>
-                    <li><a href="#inicio">Inicio</a></li>
-                    <li><a href="https://yae1ram0s.github.io/MenuMiztli/">Menu</a></li>
-                    <li><a href="#nosotros">Nosotros</a></li>
-                    <li><a href="#galeria">Galeria</a></li>
-                    <li><a href="#promociones">Promociones</a></li>
-                    <li><a href="#horarios">Horario</a></li>
+                    <li><a href="#inicio">INICIO</a></li>
+                    <li><a href="https://yae1ram0s.github.io/MenuMiztli/">MENU</a></li>
+                    <li><a href="#nosotros">NOSOTROS</a></li>
+                    <li><a href="#galeria">GALERIA</a></li>
+                    <li><a href="#promociones">PROMOCIONES</a></li>
                 </ul>
             </div>
             <div class="links">
