--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
         <div class="columnas">
             <div class="columna">
                 <div class="linea"></div>
-                <h3 class="titulo">Vestimenta preferible:</h3>
-                <p>Formal. Los caballeros pueden usar pantalón de vestir, bermuda de vestir, o jeans. Favor de considerar que no se permite el uso de jeans desgastados o rotos.</p>
+                <h3 class="titulo">Ubicacion:</h3>
+                <p>Jalapa 77-83, Roma Norte, Cuauhtemoc, 06700 Ciudad de Mexico</p>
             </div>
             <div class="columna">
                 <div class="linea"></div>
@@ -138,9 +138,9 @@
                 <ul>
                     <li><a href="#inicio">INICIO</a></li>
                     <li><a href="https://yae1ram0s.github.io/MenuMiztli/">MENU</a></li>
-                    <li><a href="#nosotros">NOSOTROS</a></li>
                     <li><a href="#galeria">GALERIA</a></li>
                     <li><a href="#promociones">PROMOCIONES</a></li>
+                    <li><a href="#nosotros">NOSOTROS</a></li>
                 </ul>
             </div>
             <div class="links">
