--- a/index.html
+++ b/index.html
@@ -149,6 +149,12 @@
                 <ul>
                     <li><a href="">miztli@gmail.com</a></li>
                     <li><a href="">55454322321</a></li>
+                    <li>
+                        <img src="imag/facebook.png" alt="">
+                    </li>
+                    <li>
+                        <img src="imag/logo_inst.png" alt="">
+                    </li>
                 </ul>
             </div>
         </div>
