--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <ul>
                     <li>Programacion Web 1</li>
                     <li>Proyecto de restaurante</li>
-                    <li>Edit. Gustavo Yael</li>
+                    <li>Edit. Yael</li>
                 </ul>
             </div>
             <div class="links">
